<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/btnMenuBookings"
        android:title="@string/title_myBookings"
        android:icon="@drawable/ic_bookings"/>

    <item android:id="@+id/btnMenuAllBookings"
        android:title="@string/title_allBookings"
        android:icon="@drawable/ic_all_bookings"
        android:visible="false"/>

    <item android:id="@+id/bnbPlaceholder"
        android:title=""/>

    <item android:id="@+id/btnMenuUsers"
        android:title="@string/title_users"
        android:icon="@drawable/ic_users"
        android:visible="false"/>

    <item android:id="@+id/btnMenuProfile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_account"/>

</menu>