<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/default_margin"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/title_text"
            android:layout_marginTop="@dimen/medium_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/your_details_signup"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_first_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_confirm_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_company_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_company_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dunsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            android:hint="@string/signup_duns">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dunsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto_bold"
            android:padding="15dp"
            android:text="@string/btn_sign_up"
            app:cornerRadius="25dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="60dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/signInLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/link_sign_in"
                android:textColor="@color/primary_blue"
                android:textSize="@dimen/small_text"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>