<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/default_margin"
    android:gravity="center|top"
    tools:context=".fragments.EditPreferencesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/small_margin"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/edit_preferences_fragment_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text" />

    <!-- Preferred Airlines -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/airlines_setup"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/airlines_setup_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPreferencesFirstPreferredAirlineContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_input"
        android:layout_marginTop="@dimen/xxsmall_margin"
        android:hint="@string/top_1"
        android:labelFor="@id/firstAirline"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp">

        <AutoCompleteTextView
            android:id="@+id/editPreferencesFirstAirline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPreferencesSecondPreferredAirlineContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_input"
        android:layout_marginTop="@dimen/xxsmall_margin"
        android:hint="@string/top_2"
        android:labelFor="@id/secondAirline"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp">

        <AutoCompleteTextView
            android:id="@+id/editPreferencesSecondAirline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Preferred Hotels -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/hotels_setup"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/hotels_setup_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPreferencesFirstPreferredHotelContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_input"
        android:layout_marginTop="@dimen/xxsmall_margin"
        android:hint="@string/top_1"
        android:labelFor="@id/firstHotel"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp">

        <AutoCompleteTextView
            android:id="@+id/editPreferencesFirstHotel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPreferencesSecondPreferredHotelContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_input"
        android:layout_marginTop="@dimen/xxsmall_margin"
        android:hint="@string/top_2"
        android:labelFor="@id/secondHotel"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp">

        <AutoCompleteTextView
            android:id="@+id/editPreferencesSecondHotel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Button -->
    <Button
        android:id="@+id/editSaveBtn"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/medium_margin"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/default_button_padding"
        android:text="@string/edit_save_btn"
        android:textColor="@color/white"
        app:cornerRadius="25dp"/>

    <!-- Cancel Button -->
    <TextView
        android:id="@+id/editCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/edit_cancel_btn"
        android:textColor="@color/red"
        android:textSize="@dimen/small_text" />

</LinearLayout>